--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
